dc/s2n-quic-dc/src/snapshots/stream__reader__tests__max_data_transmission_failure_surfaces_error.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE m#test.sojourn[transmission_error]=0
0:00:00.000000000 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=524289 total_received_len=524289 is_writing_complete=false is_reading_complete=false
0:00:00.000000000 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
