dc/s2n-quic-dc/src/snapshots/stream__reader__tests__recv_credit_conserved_across_stream_lifecycle.snap
---
source: dc/s2n-quic-dc/src/testing.rs
assertion_line: 352
expression: logs
---
0:00:00.000000000 [main] TRACE c#credit.acquire.fast_path=1
0:00:00.000000000 [main] TRACE c#credit.acquire.bytes=600000
0:00:00.000000000 [main] DEBUG Reader complete - all data consumed binding_id=1 final_size=Some(600008) consumed_len=600008
0:00:00.000000000 [main] DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Reader dropping binding_id=1 status=Complete final_size=Some(600008) consumed_len=600008 total_received_len=600008 is_writing_complete=true is_reading_complete=true
0:00:00.000000000 [main] TRACE c#credit.release.bytes=600000
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
